Fixed bug on geo homepage overflow-x doesn't work on mobile for body. Hadto create another div and applied overflow on this.  Changes to be committed: 	modified:   homepage/css/style.css 	modified:   homepage/index.html 	modified:   nginx_geo/sites/geo.intellideep.digital/css/style.css 	deleted:    nginx_geo/sites/geo.intellideep.digital/css/utilities.css 	deleted:    nginx_geo/sites/geo.intellideep.digital/favicon.ico 	deleted:    nginx_geo/sites/geo.intellideep.digital/images/Landmarks card.svg 	deleted:    nginx_geo/sites/geo.intellideep.digital/images/mockup.svg 	modified:   nginx_geo/sites/geo.intellideep.digital/index.html 	new file:   nginx_geo/sites/homepage.tar.gz

--- a/homepage/css/style.css
+++ b/homepage/css/style.css
@@ -528,6 +528,10 @@ a, a:hover, a:link, a:visited {
         overflow-x: hidden;
     }
 
+    .body_container {
+        overflow-x: hidden;
+    }
+
     .img img {
         width: 250%;
         transform: translateX(-25rem);
